namespace HiFive.Domain.Contracts;

public abstract class User : IDeletable
{
	public Guid Id { get; set; }

	public string DisplayName { get; set; } = null!;
	public string? FirstName { get; set; }
	public string? LastName { get; set; }
	public string? Bio { get; set; }
	public byte[]? ProfilePicture { get; set; }

	public bool IsDeleted { get; set; }
	public DateTime? DeletedOn { get; set; }
	public DateTime CreatedOn { get; set; }
	public DateTime UpdatedOn { get; set; }
}