using HiFive.Domain.Contracts;

namespace HiFive.Domain.Models.Users;
public class Admin : ApplicationUser
{

}
